# codelore

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  compose.yaml  pyproject.toml
docs/: glossary.md
docs/architecture/: 00-overview.md  01-evidence-pack-pipeline.md  02-temporal-model.md  03-identity-and-canonicalization.md  04-schema.md  05-derived-views-and-rdf.md
docs/evidence/: 02-evidence-policy.md  03-claim-taxonomy.md
docs/extraction/: 01-extraction-memo.md
docs/handoffs/: 00-general-handoff.md  01-agent-handoff-prompt.md  2026-07-04-state-vs-change-evidence.md
docs/plans/: 00-development-plan.md  00b-development-plan-evidence-first.md  01-automated-reasoning-plan.md  02-data-engineering-infrastructure-plan.md  03-phase-2-implementation-plan.md
docs/product/: 00-product-definition.md
docs/reviews/: 2026-07-04-adversarial-review-00b.md  2026-07-04-automated-reasoning-review-00b.md  2026-07-04-data-engineering-review-00b.md  2026-07-04-data-systems-review-09-temporal-validity.md  2026-07-04-data-systems-review-10-link-record-model.md  2026-07-04-data-systems-review-11-record-admission-model.md  2026-07-04-data-systems-review-current-architecture-database-inside-out.md  2026-07-04-data-systems-review-current-architecture.md  2026-07-04-high-assurance-review-10-link-record-model.md  2026-07-04-high-assurance-review-11-record-admission-model.md  2026-07-04-msr-review-00b.md  2026-07-04-ontology-review-09-temporal-validity.md  2026-07-04-ontology-review-10-link-record-model.md  (+3 more)
src/codelore/: __init__.py  (+2 more)
tests/: test_cli.py  test_models.py
(+22 files in other folders)
