[project]
name = "codelore"
version = "0.1.0"
description = "Evidence-backed project memory over bounded change windows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.0",
    "rich>=14.0.0",
    "typer>=0.20.0",
]

[project.scripts]
codelore = "codelore.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codelore"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
